--- a/css/style.css
+++ b/css/style.css
@@ -8092,15 +8092,19 @@ p:last-child,
     background-color: #fff; }
 
 /* line 1, ../scss/fxj/_typo.scss */
+body {
+  font-size: 1.6rem;
+  font-weight: 300; }
+
+/* line 5, ../scss/fxj/_typo.scss */
 .h2--separator, .block-title {
   font-weight: 300;
-  margin: 30px 0;
+  margin: 3rem 0;
   position: relative;
-  text-align: center;
   z-index: 1; }
-  /* line 8, ../scss/fxj/_typo.scss */
+  /* line 11, ../scss/fxj/_typo.scss */
   .h2--separator:before, .block-title:before {
-    border-top: 1px solid #333333;
+    border-top: 1px solid #eeeeee;
     content: "";
     margin: 0 auto;
     /* this centers the line to the full width specified */
@@ -8112,11 +8116,12 @@ p:last-child,
     bottom: 0;
     width: 100%;
     z-index: -1; }
-  /* line 18, ../scss/fxj/_typo.scss */
+  /* line 21, ../scss/fxj/_typo.scss */
   .h2--separator span, .block-title span {
     background-color: white;
     display: inline-block;
-    padding: 0 5px; }
+    margin: 0 0 0 2rem;
+    padding: 0 1rem; }
 
 /* line 2, ../scss/fxj/_layout.scss */
 .container-fluid {
@@ -8495,9 +8500,9 @@ p:last-child,
   color: white; }
 /* line 171, ../scss/fxj/_footer.scss */
 .footer h2 {
-  color: #555555;
-  font-size: 20px;
-  font-weight: 400;
+  color: #777777;
+  font-size: 2rem;
+  font-weight: 300;
   margin-top: 0;
   margin-bottom: 20px; }
 /* line 178, ../scss/fxj/_footer.scss */
@@ -8505,7 +8510,7 @@ p:last-child,
   font-weight: 400; }
 /* line 181, ../scss/fxj/_footer.scss */
 .footer .block {
-  margin: 0 0 15px 0; }
+  margin: 0 0 3rem 0; }
   /* line 189, ../scss/fxj/_footer.scss */
   .footer .block:first-of-type img {
     width: 100px; }
@@ -8764,11 +8769,14 @@ a.a2a_i, i.a2a_i {
 /* line 5, ../scss/fxj/_views.scss */
 .view-footer,
 .collaborate-footer {
-  font-size: 16px;
-  font-weight: 300;
+  margin: 2rem 0 3rem 0;
   text-transform: uppercase; }
+  /* line 10, ../scss/fxj/_views.scss */
+  .view-footer .svg-inline--fa,
+  .collaborate-footer .svg-inline--fa {
+    margin-right: 1rem; }
 
-/* line 12, ../scss/fxj/_views.scss */
+/* line 15, ../scss/fxj/_views.scss */
 .views-field-field-tipo .field-content {
   background-color: white;
   border-radius: 15px;
@@ -8776,22 +8784,22 @@ a.a2a_i, i.a2a_i {
   width: 30px;
   text-align: center;
   padding-top: 7px; }
-  /* line 20, ../scss/fxj/_views.scss */
+  /* line 23, ../scss/fxj/_views.scss */
   .views-field-field-tipo .field-content h2,
   .views-field-field-tipo .field-content .field--label {
     display: none; }
 
-/* line 27, ../scss/fxj/_views.scss */
+/* line 30, ../scss/fxj/_views.scss */
 .views-field-field-imagen a,
 .views-field-field-image a {
   display: block; }
-  /* line 30, ../scss/fxj/_views.scss */
+  /* line 33, ../scss/fxj/_views.scss */
   .views-field-field-imagen a img,
   .views-field-field-image a img {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s; }
-  /* line 36, ../scss/fxj/_views.scss */
+  /* line 39, ../scss/fxj/_views.scss */
   .views-field-field-imagen a:hover img, .views-field-field-imagen a:focus img,
   .views-field-field-image a:hover img,
   .views-field-field-image a:focus img {
@@ -8800,36 +8808,36 @@ a.a2a_i, i.a2a_i {
     -o-transform: scale(1.1);
     transform: scale(1.1); }
 
-/* line 44, ../scss/fxj/_views.scss */
+/* line 47, ../scss/fxj/_views.scss */
 .views-field-title a {
   display: block;
   padding: 5px; }
 
-/* line 49, ../scss/fxj/_views.scss */
+/* line 52, ../scss/fxj/_views.scss */
 .views-field-body {
   margin: 5px 0; }
 
-/* line 54, ../scss/fxj/_views.scss */
+/* line 57, ../scss/fxj/_views.scss */
 .col, .region-collaborate .collaborate-feature-container {
   position: relative;
   margin-bottom: 15px; }
-  /* line 59, ../scss/fxj/_views.scss */
+  /* line 62, ../scss/fxj/_views.scss */
   .col .views-field-title a, .region-collaborate .collaborate-feature-container .views-field-title a {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
     font-weight: 300;
     text-decoration: none; }
-  /* line 66, ../scss/fxj/_views.scss */
+  /* line 69, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .region-collaborate .collaborate-feature-container .views-field-field-tipo {
     left: 20px;
     position: absolute;
     top: 60px; }
 
-/* line 73, ../scss/fxj/_views.scss */
+/* line 76, ../scss/fxj/_views.scss */
 .view-row-media {
   margin-bottom: 15px; }
-  /* line 77, ../scss/fxj/_views.scss */
+  /* line 80, ../scss/fxj/_views.scss */
   .view-row-media .views-field-field-tipo {
     background-color: #16a085;
     height: 100px;
@@ -8837,16 +8845,16 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     width: 100px;
     text-align: center; }
-    /* line 85, ../scss/fxj/_views.scss */
+    /* line 88, ../scss/fxj/_views.scss */
     .view-row-media .views-field-field-tipo .field-content {
       border-radius: 25px;
       display: inline-block;
-      font-size: 20px;
+      font-size: 2rem;
       height: 50px;
       margin-top: 25px;
       padding-top: 10px;
       width: 50px; }
-  /* line 96, ../scss/fxj/_views.scss */
+  /* line 99, ../scss/fxj/_views.scss */
   .view-row-media .views-field-title,
   .view-row-media .views-field-body,
   .view-row-media .views-field-field-fecha,
@@ -8854,7 +8862,7 @@ a.a2a_i, i.a2a_i {
     padding-left: 120px; }
 
 @media (max-width: 768px) {
-  /* line 105, ../scss/fxj/_views.scss */
+  /* line 108, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8864,7 +8872,7 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     text-align: center;
     width: 100px; }
-    /* line 114, ../scss/fxj/_views.scss */
+    /* line 117, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen img, .region-collaborate .collaborate-feature-container .views-field-field-imagen img,
     .col .views-field-field-image img,
     .region-collaborate .collaborate-feature-container .views-field-field-image img {
@@ -8873,7 +8881,7 @@ a.a2a_i, i.a2a_i {
       position: relative;
       width: auto;
       max-width: none; }
-  /* line 122, ../scss/fxj/_views.scss */
+  /* line 125, ../scss/fxj/_views.scss */
   .col .views-field-title, .region-collaborate .collaborate-feature-container .views-field-title,
   .col .views-field-body,
   .region-collaborate .collaborate-feature-container .views-field-body,
@@ -8881,7 +8889,7 @@ a.a2a_i, i.a2a_i {
   .region-collaborate .collaborate-feature-container .views-field-view-node {
     padding-left: 120px; } }
 @media (min-width: 768px) {
-  /* line 131, ../scss/fxj/_views.scss */
+  /* line 134, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8889,19 +8897,19 @@ a.a2a_i, i.a2a_i {
     margin-bottom: -30px;
     overflow: hidden;
     position: relative; }
-    /* line 138, ../scss/fxj/_views.scss */
+    /* line 141, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen .field-content, .region-collaborate .collaborate-feature-container .views-field-field-imagen .field-content,
     .col .views-field-field-image .field-content,
     .region-collaborate .collaborate-feature-container .views-field-field-image .field-content {
       position: relative;
       top: -32%; }
-  /* line 144, ../scss/fxj/_views.scss */
+  /* line 147, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .region-collaborate .collaborate-feature-container .views-field-field-tipo {
     left: 10px;
     position: relative;
     top: -10px; } }
 @media (min-width: 992px) {
-  /* line 154, ../scss/fxj/_views.scss */
+  /* line 157, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8909,41 +8917,44 @@ a.a2a_i, i.a2a_i {
     margin-bottom: -30px;
     overflow: hidden;
     position: static; }
-    /* line 161, ../scss/fxj/_views.scss */
+    /* line 164, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen .field-content, .region-collaborate .collaborate-feature-container .views-field-field-imagen .field-content,
     .col .views-field-field-image .field-content,
     .region-collaborate .collaborate-feature-container .views-field-field-image .field-content {
       position: static;
       top: auto; } }
-/* line 171, ../scss/fxj/_views.scss */
+/* line 174, ../scss/fxj/_views.scss */
 .collaborate.container-fluid {
-  background-color: #fdf9ea;
+  background-color: #eeeeee;
   margin: 40px 0;
   max-width: none;
   padding: 0; }
 
-/* line 178, ../scss/fxj/_views.scss */
+/* line 181, ../scss/fxj/_views.scss */
 .region-collaborate {
   max-width: 1170px;
   margin-right: auto;
   margin-left: auto;
   padding: 15px; }
 
-/* line 185, ../scss/fxj/_views.scss */
+/* line 188, ../scss/fxj/_views.scss */
 .collaborate-header {
   margin-bottom: 15px; }
 
-/* line 189, ../scss/fxj/_views.scss */
-.region-collaborate .h2--separator span, .region-collaborate .block-title span {
-  background-color: #fdf9ea; }
 /* line 193, ../scss/fxj/_views.scss */
+.region-collaborate .h2--separator:before, .region-collaborate .block-title:before {
+  border-color: white; }
+/* line 196, ../scss/fxj/_views.scss */
+.region-collaborate .h2--separator span, .region-collaborate .block-title span {
+  background-color: #eeeeee; }
+/* line 201, ../scss/fxj/_views.scss */
 .region-collaborate .collaborate-header h2 {
   display: none; }
-/* line 202, ../scss/fxj/_views.scss */
+/* line 210, ../scss/fxj/_views.scss */
 .region-collaborate .collaborate-feature {
-  font-size: 20px;
+  font-size: 2rem;
   text-align: center; }
-  /* line 206, ../scss/fxj/_views.scss */
+  /* line 214, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature a {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -8951,11 +8962,11 @@ a.a2a_i, i.a2a_i {
     display: block;
     padding: 20px;
     text-decoration: none; }
-  /* line 214, ../scss/fxj/_views.scss */
+  /* line 222, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature p {
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 300; }
-  /* line 218, ../scss/fxj/_views.scss */
+  /* line 226, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature .fontawesome-icon {
     width: 40px;
     height: 40px;
@@ -8967,13 +8978,10 @@ a.a2a_i, i.a2a_i {
     margin: 0 auto 10px auto;
     padding-top: 8px; }
 @media (min-width: 992px) {
-  /* line 230, ../scss/fxj/_views.scss */
+  /* line 238, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature {
-    font-size: 30px; }
-    /* line 233, ../scss/fxj/_views.scss */
-    .region-collaborate .collaborate-feature a {
-      min-height: 5.9em; }
-    /* line 237, ../scss/fxj/_views.scss */
+    font-size: 3rem; }
+    /* line 241, ../scss/fxj/_views.scss */
     .region-collaborate .collaborate-feature .fontawesome-icon {
       width: 70px;
       height: 70px;
@@ -8981,9 +8989,9 @@ a.a2a_i, i.a2a_i {
       font-size: 30px;
       padding-top: 14px; } }
 
-/* line 248, ../scss/fxj/_views.scss */
+/* line 252, ../scss/fxj/_views.scss */
 .footer .collaborate-header p {
   display: none; }
-/* line 252, ../scss/fxj/_views.scss */
+/* line 256, ../scss/fxj/_views.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
