--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -169,9 +169,9 @@
     color: white;
   }
   h2 {
-    color: $gray;
-    font-size: 20px;
-    font-weight: 400;
+    color: $gray-light;
+    font-size: 2rem;
+    font-weight: 300;
     margin-top: 0;
     margin-bottom: 20px;
   }
@@ -179,7 +179,7 @@
     font-weight: 400;
   }
   .block {
-    margin: 0 0 15px 0;
+    margin: 0 0 3rem 0;
     &:not(:last-of-type) {
       @extend .col-sm-6;
       @extend .col-md-3;
