--- a/scss/fxj/_typo.scss
+++ b/scss/fxj/_typo.scss
@@ -1,12 +1,15 @@
+body{
+  font-size: 1.6rem;
+  font-weight: 300;
+}
 .h2--separator {
   font-weight: 300;
-  margin: 30px 0;
+  margin: 3rem 0;
   position: relative;
-  text-align: center;
   z-index: 1;
 
   &:before {
-        border-top: 1px solid $gray-dark;
+        border-top: 1px solid $gray-lighter;
         content:"";
         margin: 0 auto; /* this centers the line to the full width specified */
         position: absolute; /* positioning must be absolute here, and relative positioning must be applied to the parent */
@@ -18,7 +21,8 @@
   span {
     background-color: white;
     display: inline-block;
-    padding: 0 5px;
+    margin: 0 0 0 2rem;
+    padding: 0 1rem;
   }
 }
 .block-title {
