--- a/css/style.css
+++ b/css/style.css
@@ -8774,9 +8774,10 @@ a.a2a_i, i.a2a_i {
   /* line 10, ../scss/fxj/_views.scss */
   .view-footer .svg-inline--fa,
   .collaborate-footer .svg-inline--fa {
-    margin-right: 1rem; }
+    margin-right: 1rem;
+    width: auto; }
 
-/* line 15, ../scss/fxj/_views.scss */
+/* line 16, ../scss/fxj/_views.scss */
 .views-field-field-tipo .field-content {
   background-color: white;
   border-radius: 15px;
@@ -8784,22 +8785,22 @@ a.a2a_i, i.a2a_i {
   width: 30px;
   text-align: center;
   padding-top: 7px; }
-  /* line 23, ../scss/fxj/_views.scss */
+  /* line 24, ../scss/fxj/_views.scss */
   .views-field-field-tipo .field-content h2,
   .views-field-field-tipo .field-content .field--label {
     display: none; }
 
-/* line 30, ../scss/fxj/_views.scss */
+/* line 31, ../scss/fxj/_views.scss */
 .views-field-field-imagen a,
 .views-field-field-image a {
   display: block; }
-  /* line 33, ../scss/fxj/_views.scss */
+  /* line 34, ../scss/fxj/_views.scss */
   .views-field-field-imagen a img,
   .views-field-field-image a img {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s; }
-  /* line 39, ../scss/fxj/_views.scss */
+  /* line 40, ../scss/fxj/_views.scss */
   .views-field-field-imagen a:hover img, .views-field-field-imagen a:focus img,
   .views-field-field-image a:hover img,
   .views-field-field-image a:focus img {
@@ -8808,36 +8809,36 @@ a.a2a_i, i.a2a_i {
     -o-transform: scale(1.1);
     transform: scale(1.1); }
 
-/* line 47, ../scss/fxj/_views.scss */
+/* line 48, ../scss/fxj/_views.scss */
 .views-field-title a {
   display: block;
   padding: 5px; }
 
-/* line 52, ../scss/fxj/_views.scss */
+/* line 53, ../scss/fxj/_views.scss */
 .views-field-body {
   margin: 5px 0; }
 
-/* line 57, ../scss/fxj/_views.scss */
+/* line 58, ../scss/fxj/_views.scss */
 .col, .region-collaborate .collaborate-feature-container {
   position: relative;
   margin-bottom: 15px; }
-  /* line 62, ../scss/fxj/_views.scss */
+  /* line 63, ../scss/fxj/_views.scss */
   .col .views-field-title a, .region-collaborate .collaborate-feature-container .views-field-title a {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
     font-weight: 300;
     text-decoration: none; }
-  /* line 69, ../scss/fxj/_views.scss */
+  /* line 70, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .region-collaborate .collaborate-feature-container .views-field-field-tipo {
     left: 20px;
     position: absolute;
     top: 60px; }
 
-/* line 76, ../scss/fxj/_views.scss */
+/* line 77, ../scss/fxj/_views.scss */
 .view-row-media {
   margin-bottom: 15px; }
-  /* line 80, ../scss/fxj/_views.scss */
+  /* line 81, ../scss/fxj/_views.scss */
   .view-row-media .views-field-field-tipo {
     background-color: #16a085;
     height: 100px;
@@ -8845,7 +8846,7 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     width: 100px;
     text-align: center; }
-    /* line 88, ../scss/fxj/_views.scss */
+    /* line 89, ../scss/fxj/_views.scss */
     .view-row-media .views-field-field-tipo .field-content {
       border-radius: 25px;
       display: inline-block;
@@ -8854,7 +8855,7 @@ a.a2a_i, i.a2a_i {
       margin-top: 25px;
       padding-top: 10px;
       width: 50px; }
-  /* line 99, ../scss/fxj/_views.scss */
+  /* line 100, ../scss/fxj/_views.scss */
   .view-row-media .views-field-title,
   .view-row-media .views-field-body,
   .view-row-media .views-field-field-fecha,
@@ -8862,7 +8863,7 @@ a.a2a_i, i.a2a_i {
     padding-left: 120px; }
 
 @media (max-width: 768px) {
-  /* line 108, ../scss/fxj/_views.scss */
+  /* line 109, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8872,7 +8873,7 @@ a.a2a_i, i.a2a_i {
     margin-right: 10px;
     text-align: center;
     width: 100px; }
-    /* line 117, ../scss/fxj/_views.scss */
+    /* line 118, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen img, .region-collaborate .collaborate-feature-container .views-field-field-imagen img,
     .col .views-field-field-image img,
     .region-collaborate .collaborate-feature-container .views-field-field-image img {
@@ -8881,7 +8882,7 @@ a.a2a_i, i.a2a_i {
       position: relative;
       width: auto;
       max-width: none; }
-  /* line 125, ../scss/fxj/_views.scss */
+  /* line 126, ../scss/fxj/_views.scss */
   .col .views-field-title, .region-collaborate .collaborate-feature-container .views-field-title,
   .col .views-field-body,
   .region-collaborate .collaborate-feature-container .views-field-body,
@@ -8889,7 +8890,7 @@ a.a2a_i, i.a2a_i {
   .region-collaborate .collaborate-feature-container .views-field-view-node {
     padding-left: 120px; } }
 @media (min-width: 768px) {
-  /* line 134, ../scss/fxj/_views.scss */
+  /* line 135, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8897,19 +8898,19 @@ a.a2a_i, i.a2a_i {
     margin-bottom: -30px;
     overflow: hidden;
     position: relative; }
-    /* line 141, ../scss/fxj/_views.scss */
+    /* line 142, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen .field-content, .region-collaborate .collaborate-feature-container .views-field-field-imagen .field-content,
     .col .views-field-field-image .field-content,
     .region-collaborate .collaborate-feature-container .views-field-field-image .field-content {
       position: relative;
       top: -32%; }
-  /* line 147, ../scss/fxj/_views.scss */
+  /* line 148, ../scss/fxj/_views.scss */
   .col .views-field-field-tipo, .region-collaborate .collaborate-feature-container .views-field-field-tipo {
     left: 10px;
     position: relative;
     top: -10px; } }
 @media (min-width: 992px) {
-  /* line 157, ../scss/fxj/_views.scss */
+  /* line 158, ../scss/fxj/_views.scss */
   .col .views-field-field-imagen, .region-collaborate .collaborate-feature-container .views-field-field-imagen,
   .col .views-field-field-image,
   .region-collaborate .collaborate-feature-container .views-field-field-image {
@@ -8917,44 +8918,44 @@ a.a2a_i, i.a2a_i {
     margin-bottom: -30px;
     overflow: hidden;
     position: static; }
-    /* line 164, ../scss/fxj/_views.scss */
+    /* line 165, ../scss/fxj/_views.scss */
     .col .views-field-field-imagen .field-content, .region-collaborate .collaborate-feature-container .views-field-field-imagen .field-content,
     .col .views-field-field-image .field-content,
     .region-collaborate .collaborate-feature-container .views-field-field-image .field-content {
       position: static;
       top: auto; } }
-/* line 174, ../scss/fxj/_views.scss */
+/* line 175, ../scss/fxj/_views.scss */
 .collaborate.container-fluid {
   background-color: #eeeeee;
   margin: 40px 0;
   max-width: none;
   padding: 0; }
 
-/* line 181, ../scss/fxj/_views.scss */
+/* line 182, ../scss/fxj/_views.scss */
 .region-collaborate {
   max-width: 1170px;
   margin-right: auto;
   margin-left: auto;
   padding: 15px; }
 
-/* line 188, ../scss/fxj/_views.scss */
+/* line 189, ../scss/fxj/_views.scss */
 .collaborate-header {
   margin-bottom: 15px; }
 
-/* line 193, ../scss/fxj/_views.scss */
+/* line 194, ../scss/fxj/_views.scss */
 .region-collaborate .h2--separator:before, .region-collaborate .block-title:before {
   border-color: white; }
-/* line 196, ../scss/fxj/_views.scss */
+/* line 197, ../scss/fxj/_views.scss */
 .region-collaborate .h2--separator span, .region-collaborate .block-title span {
   background-color: #eeeeee; }
-/* line 201, ../scss/fxj/_views.scss */
+/* line 202, ../scss/fxj/_views.scss */
 .region-collaborate .collaborate-header h2 {
   display: none; }
-/* line 210, ../scss/fxj/_views.scss */
+/* line 211, ../scss/fxj/_views.scss */
 .region-collaborate .collaborate-feature {
   font-size: 2rem;
   text-align: center; }
-  /* line 214, ../scss/fxj/_views.scss */
+  /* line 215, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature a {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -8962,11 +8963,11 @@ a.a2a_i, i.a2a_i {
     display: block;
     padding: 20px;
     text-decoration: none; }
-  /* line 222, ../scss/fxj/_views.scss */
+  /* line 223, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature p {
     font-size: 2rem;
     font-weight: 300; }
-  /* line 226, ../scss/fxj/_views.scss */
+  /* line 227, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature .fontawesome-icon {
     width: 40px;
     height: 40px;
@@ -8978,10 +8979,10 @@ a.a2a_i, i.a2a_i {
     margin: 0 auto 10px auto;
     padding-top: 8px; }
 @media (min-width: 992px) {
-  /* line 238, ../scss/fxj/_views.scss */
+  /* line 239, ../scss/fxj/_views.scss */
   .region-collaborate .collaborate-feature {
     font-size: 3rem; }
-    /* line 241, ../scss/fxj/_views.scss */
+    /* line 242, ../scss/fxj/_views.scss */
     .region-collaborate .collaborate-feature .fontawesome-icon {
       width: 70px;
       height: 70px;
@@ -8989,9 +8990,9 @@ a.a2a_i, i.a2a_i {
       font-size: 30px;
       padding-top: 14px; } }
 
-/* line 252, ../scss/fxj/_views.scss */
+/* line 253, ../scss/fxj/_views.scss */
 .footer .collaborate-header p {
   display: none; }
-/* line 256, ../scss/fxj/_views.scss */
+/* line 257, ../scss/fxj/_views.scss */
 .footer .collaborate-feature-container {
   margin-bottom: 10px; }
