--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -83,7 +83,7 @@
 
         .menu-enlace {
           @include btn-donate();
-          border-radius: 21px;
+          border-radius: 2.5rem;
           display: inline-block;
           text-decoration: none;
         }
@@ -138,8 +138,8 @@
           &:not(:last-of-type) {
             > a {
               border-bottom: 5px solid white;
-              bottom: -4px;
-              font-size: 18px;
+              bottom: -1px;
+              font-size: 1.8rem;
               font-weight: 300;
               padding: 20px 25px 20px 20px;
               position: relative;
