--- a/scss/fxj/_typo.scss
+++ b/scss/fxj/_typo.scss
@@ -2,6 +2,9 @@ body{
   font-size: 1.6rem;
   font-weight: 300;
 }
+img {
+  @extend .img-responsive;
+}
 .h2--separator {
   font-weight: 300;
   margin: 3rem 0;
